cleaned up comments on index and stylesheet

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 		<link rel="stylesheet" href="stylesheets/foundation.css" />
     	<link rel="stylesheet" href="stylesheets/app.css" />
     	<link rel="stylesheet" href="stylesheets/mfizz/font-mfizz.css">
-		<!-- <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Poiret+One|PT+Sans+Narrow|Lobster"> -->
 		<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 	</head>
 	<body>
+		<!-- Page Layout -->
 		<div>
 			<!-- Mobile Nav -->
 			<div data-sticky-container class="sticky-container">
@@ -25,33 +25,32 @@
 				</div>
 			</div>
 			<!-- Nav Bar -->
-			<!-- <div data-sticky-container data-sticky class="contain-to-grid sticky" data-top-anchor='1' data-options="marginTop:0; sticky_on: medium, large;" style="width:100%;"> -->
-				<nav class="top-bar" id="nav-menu"  role="navigation">
-				    <div class="top-bar-left">
-			            <ul class="dropdown menu vertical medium-horizontal" data-dropdown-menu data-responsive-menu="drilldown medium-dropdown">
-			            	<li class="menu-text show-for-medium site-name">Jane Wallace</li>
-			                <li><a href="index.html">About</a></li>
-			                <li class="is-dropdown-submenu-parent is-down-arrow">
-			                	<a>Projects</a>
-			                	<ul class="submenu menu vertical" data-submenu>
-					                <li><a href="#ecommerce-app">Ecommerce App</a></li>
-					                <li><a href="#saas-app">SaaS App</a></li>
-					                <li><a href="#static-site">Static Site</a></li>
-					            </ul>
-			                </li>
-			                <li><a href="#contact">Contact</a></li>
-			            </ul>
-				    </div>
-				    <div class="top-bar-right">
-			            <ul class="menu">
-			                <li><a href="https://www.linkedin.com/in/jane3wallace" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-			                <li><a href="https://github.com/jane3wallace" target="_blank"><i class="fa fa-github"></i></a></li>
-			                <li><a href="https://twitter.com/jane3wallace" target="_blank"><i class="fa fa-twitter"></i></a></li>
-			                <li><a href="mailto:jane3wallace@gmail.com?subject=You%20are%20awesome!"><i class="fa fa-envelope"></i></a></li>
-			            </ul>
-				    </div>
-				</nav>
-			<!-- </div> --> <!-- end nav bar -->
+			<nav class="top-bar" id="nav-menu"  role="navigation">
+			    <div class="top-bar-left">
+		            <ul class="dropdown menu vertical medium-horizontal" data-dropdown-menu data-responsive-menu="drilldown medium-dropdown">
+		            	<li class="menu-text show-for-medium site-name">Jane Wallace</li>
+		                <li><a href="index.html">About</a></li>
+		                <li class="is-dropdown-submenu-parent is-down-arrow">
+		                	<a>Projects</a>
+		                	<ul class="submenu menu vertical" data-submenu>
+				                <li><a href="#ecommerce-app">Ecommerce App</a></li>
+				                <li><a href="#saas-app">SaaS App</a></li>
+				                <li><a href="#static-site">Static Site</a></li>
+				            </ul>
+		                </li>
+		                <li><a href="#contact">Contact</a></li>
+		            </ul>
+			    </div>
+			    <div class="top-bar-right">
+		            <ul class="menu">
+		                <li><a href="https://www.linkedin.com/in/jane3wallace" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+		                <li><a href="https://github.com/jane3wallace" target="_blank"><i class="fa fa-github"></i></a></li>
+		                <li><a href="https://twitter.com/jane3wallace" target="_blank"><i class="fa fa-twitter"></i></a></li>
+		                <li><a href="mailto:jane3wallace@gmail.com?subject=You%20are%20awesome!"><i class="fa fa-envelope"></i></a></li>
+		            </ul>
+			    </div>
+			</nav> <!-- end nav bar -->
+			<!-- Main Content -->
 			<div id="main-content">
 				<!-- Begin Page 1 -->
 				<div class="page" id="page-1">
@@ -59,7 +58,6 @@
 					<div class="full-width-box">
 						<div class="row">
 							<div class="large-12 columns intro">
-								<!-- <img class="self-img" src="images/jane.png" alt="jane"> -->
 								<h1>Hello. My name is Jane.</h1>
 								<h4.subheader>I am a full stack developer specializing in Ruby on Rails and Back End Web Development.</h4>
 							</div>
@@ -72,12 +70,13 @@
 					<div class="page-container">
 						<div class="row">
 							<div class="large-5 columns text-center">
-								<h2 class="startup-white-text"><strong><!-- <i class="fa fa-users"></i> --> Startup.Push</strong></h2>
+								<h2 class="startup-white-text">
+									<strong>Startup.Push</strong>
+								</h2>
 							</div>
 						</div>
 						<div class="row">
 							<div class="large-5 columns">
-								<!-- <h2 class="startup-white-text"><strong><i class="fa fa-users"></i> Startup.Push</strong></h2> -->
 								<h5 class="startup-gray-text text-center">An Ecommerce SaaS App</h5>
 								<p class="startup-gray-text">
 									Cras mattis consectetur purus sit amet fermentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean lacinia bibendum nulla sed consectetur. Sed posuere consectetur est at lobortis. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nulla vitae elit libero, a pharetra.
@@ -85,22 +84,12 @@
 								<p class="startup-gray-text">
 									Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nulla vitae elit libero, a pharetra augue.
 								</p>
-								<!-- <p class="startup-gray-text demo-note">
-									<em>Click on website photo for demo. However, please note that app is hosted on Heroku and may be "asleep." Please wait up to 30 seconds for app to "wake up" and load. To sign up for Pro Account, please use card 4111111111111111 code 123.</em> 
-								</p> -->
 							</div>
 							<div class="large-7 columns">
 								<a href="https://intense-island-5820.herokuapp.com/" target="_blank"><img class="project-img" src="images/startup-push.png" alt="ecommerce app screen shot"></a>
-								<p class="startup-gray-text demo-note"><em>Click on photo above for demo. However, please note that app is hosted on Heroku and may be "asleep." Please wait up to 30 seconds for app to "wake up" and render.</em></p>
+								<p class="startup-gray-text demo-note"><em>Click on photo above for demo. However, please note that app is hosted on Heroku and may be "asleep." Please wait up to 30 seconds for app to "wake up" and load.</em></p> <!-- To sign up for Pro Account, please use card 4111111111111111 code 123. -->
 							</div>
 						</div>
-						<!-- <div class="row"> -->
-							<!-- <div class="large-7 large-offset-5 columns text-right">
-								<p class="startup-gray-text demo-note">
-									<em>Click on website photo for demo. However, please note that app is hosted on Heroku and may be "asleep." Please wait up to 30 seconds for app to "wake up" and load. To sign up for Pro Account, please use card 4111111111111111 code 123.</em>
-								</p>
-							</div> -->
-						<!-- </div> -->
 						<div class="row">
 							<div class="large-12 columns project-specs">
 								<p class="teal-link">
@@ -134,13 +123,15 @@
 					<div class="page-container">
 						<div class="row">
 							<div class="large-5 columns large-offset-7 text-center">
-								<h2 class="bookmark-black"><strong>Bookmark App</strong></h2>
+								<h2 class="bookmark-black">
+									<strong>Bookmark App</strong>
+								</h2>
 							</div>
 						</div>
 						<div class="row">
 							<div class="large-7 columns">
 								<a href="https://fathomless-hollows-2583.herokuapp.com/" target="_blank"><img class="project-img" src="images/bookmark-app.png" alt="bookmark app screen shot"></a>
-								<p class="startup-gray-text demo-note"><em>Click on photo above for demo. However, please note that app is hosted on Heroku and may be "asleep." Please wait up to 30 seconds for app to "wake up" and render.</em></p>
+								<p class="startup-gray-text demo-note"><em>Click on photo above for demo. However, please note that app is hosted on Heroku and may be "asleep." Please wait up to 30 seconds for app to "wake up" and load.</em></p>
 							</div>
 							<div class="large-5 columns">
 								<h5 class="startup-gray-text text-center">A SaaS App</h5>
@@ -150,9 +141,6 @@
 								<p class="startup-gray-text">
 									Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nulla vitae elit libero, a pharetra augue.
 								</p>
-								<!-- <p class="demo-note">
-									<em>Click on website photo for demo. However, please note that app is hosted on Heroku and may be "asleep." Please wait up to 30 seconds for app to "wake up" and load.</em>
-								</p> -->
 							</div>
 						</div>
 						<div class="row">
@@ -185,7 +173,9 @@
 					<div class="page-container">
 						<div class="row">
 							<div class="large-5 columns text-center">
-								<h2 class="roscoe-white-text"><strong>Roscoe's Bakery</strong></h2>
+								<h2 class="roscoe-white-text">
+									<strong>Roscoe's Bakery</strong>
+								</h2>
 							</div>
 						</div>
 						<div class="row">
@@ -197,9 +187,6 @@
 								<p class="startup-gray-text">
 									Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nulla vitae elit libero, a pharetra augue.
 								</p>
-								<!-- <p class="demo-note">
-									<em>Click on website photo for demo.</em>
-								</p> -->
 							</div>
 							<div class="large-7 columns">
 								<a href="http://nycda.zone/wallace696/lesson-biz-site-week-5-lecture-2/" target="_blank"><img class="project-img" src="images/roscoe-bakery.png" alt="business website screen shot"></a>
@@ -264,7 +251,7 @@
 										<input type="text" name="_honey" value="" style="display:none"> <!-- spam prevention -->
 									</div>
 									<div class="input-group-button">
-										<button type="submit" class="secondary expanded hollow button">Send Message</button> <!-- expanded ? -->
+										<button type="submit" class="secondary expanded hollow button">Send Message</button>
 									</div>
 								</form>
 							</div>
@@ -285,10 +272,8 @@
 						</div>
 					</div>
 				</div> <!-- end page 5 -->
-			</div>
-		</div> <!-- end layout
-		<!--<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>-->
+			</div> <!-- end main content -->
+		</div> <!-- end page layout -->
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 		<script src="scripts/vendor/jquery.min.js"></script>
 	    <script src="scripts/vendor/what-input.min.js"></script>
