updated navigation and menu

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 			<nav class="top-bar" id="nav-menu"  role="navigation">
 			    <div class="top-bar-left">
 		            <ul class="dropdown menu vertical medium-horizontal" data-dropdown-menu data-responsive-menu="drilldown medium-dropdown">
-		            	<li class="menu-text show-for-medium site-name">Jane Wallace</li>
-		                <li><a href="index.html">About</a></li>
+		                <li class="show-for-medium"><a href="index.html"><strong>Jane Wallace</strong></a></li>
+		                <li class="show-for-small-only"><a href="index.html">Top</a></li>
 		                <li class="is-dropdown-submenu-parent is-down-arrow">
 		                	<a>Projects</a>
 		                	<ul class="submenu menu vertical" data-submenu>
