added message confirmation thanks page

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 									<div class="input-group">
 										<input type="hidden" name="_subject" value="Message received from jane3wallace.com"> <!-- email subject -->
 										<input type="hidden" name="_replyto" value="%email"> <!-- reply to -->
-										<!-- <input type="hidden" name="_after" value="index.html"> --> <!-- url redirect -->
+										<!-- <input type="hidden" name="_after" value="http://jane3wallace.com/subpages/thanks.html"> --> <!-- url redirect -->
 										<input type="text" name="_honey" value="" style="display:none"> <!-- spam prevention -->
 									</div>
 									<div class="input-group-button">
