fixed footer margin and padding for large screens

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 							<div class="large-5 columns">
 								<h5 class="startup-gray-text text-center">An Ecommerce SaaS App</h5>
 								<p class="startup-gray-text">
-									Cras mattis consectetur purus sit amet fermentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean lacinia bibendum nulla sed consectetur. Sed posuere consectetur est at lobortis. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nulla vitae elit libero, a pharetra.
+									Startup.Push is a Ruby on Rails web application that I created for practice. The app is a social networking community set up to allow two tiers of membership plans: free plans and paid plans. Once a user chooses a plan, they are able to create a profile and to view other profiles in the community. Paid plans have access to member contact information, while free plans do not. 
 								</p>
 								<p class="startup-gray-text">
-									Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nulla vitae elit libero, a pharetra augue.
+									The app has a relational database for storing user information and profile information. The ecommerce transaction for monthly paid plans is handled through Stripe and no sensitive payment information is stored directly in the database. The Devise gem was utilized for user authentication and login. I used Sendgrid for handling mail and Paperclip for attaching profile pictures. Because the app is hosted on Heroku’s free service, I used the AWS S3 cloud for storing profile pictures. Bootstrap is the front end framework.
 								</p>
 							</div>
 							<div class="large-7 columns">
@@ -124,7 +124,7 @@
 						<div class="row">
 							<div class="large-5 columns large-offset-7 text-center">
 								<h2 class="bookmark-black">
-									<strong>Bookmark App</strong>
+									<strong>markit</strong>
 								</h2>
 							</div>
 						</div>
@@ -134,12 +134,12 @@
 								<p class="startup-gray-text demo-note"><em>Click on photo above for demo. However, please note that app is hosted on Heroku and may be "asleep." Please wait up to 30 seconds for app to "wake up" and load.</em></p>
 							</div>
 							<div class="large-5 columns">
-								<h5 class="startup-gray-text text-center">A SaaS App</h5>
+								<h5 class="startup-gray-text text-center">A SaaS Bookmark App</h5>
 								<p class="startup-gray-text">
-									Cras mattis consectetur purus sit amet fermentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean lacinia bibendum nulla sed consectetur. Sed posuere consectetur est at lobortis. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nulla vitae elit libero, a pharetra.
+									As a final project for The New York Code + Design Academy Back End 101 course in New York, I created a Ruby on Rails web application for storing bookmarks titled &quot;markit&quot;. Each user has their own login account and the ability to save urls and information about the links that they would like to store. All user and bookmark information can be created, edited and deleted.
 								</p>
 								<p class="startup-gray-text">
-									Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nulla vitae elit libero, a pharetra augue.
+									The Postgres relational database stores both a user’s information and their bookmarks, though because of a one-to-many relationship, users can only view their own bookmarks. I used Devise for user accounts and Paperclip for user account images.  I configured my mailer through plain authentication of a Gmail account, however that is not ideal due to sensitive password information that is vulnerable in the code. Navigation, forms, flash messaging and layout were designed using Bootstrap’s front end framework.
 								</p>
 							</div>
 						</div>
@@ -182,21 +182,21 @@
 							<div class="large-5 columns">
 								<h5 class="startup-gray-text text-center">A Static Business Website</h5>
 								<p class="startup-gray-text">
-									Cras mattis consectetur purus sit amet fermentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean lacinia bibendum nulla sed consectetur. Sed posuere consectetur est at lobortis. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nulla vitae elit libero, a pharetra.
+									This responsive static website was a project created for The New York Code + Design Academy's Web Development 100 course that I took in Philadelphia. I created this website from scratch with HTML, CSS and JavaScript. I used a real bakery in California as the copy for this fictitious business and purchased a royalty free photo that serves as both the landing page and the color scheme of the site.
 								</p>
 								<p class="startup-gray-text">
-									Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nulla vitae elit libero, a pharetra augue.
+									I used media queries, CSS percentage values, em units, floats and the FitText jQuery plugin on the landing page to achieve a responsive design. In the image gallery, I used a jQuery lightbox plugin called Magnific Popup to zoom in on and scroll through photos. I also used Google Maps API to add the map and location of the business on the About page. I promoted the business's social media and most used contact information by highlighting them in the footer.
 								</p>
 							</div>
 							<div class="large-7 columns">
-								<a href="http://nycda.zone/wallace696/lesson-biz-site-week-5-lecture-2/" target="_blank"><img class="project-img" src="images/roscoe-bakery.png" alt="business website screen shot"></a>
+								<a href="http://roscoes-bakery.bitballoon.com/" target="_blank"><img class="project-img" src="images/roscoe-bakery.png" alt="business website screen shot"></a>
 								<p class="startup-gray-text demo-note"><em>Click on website photo above for demo.</em></p>
 							</div>
 						</div>
 						<div class="row">
 							<div class="large-12 columns project-specs">
 								<p class="teal-link">
-									<a href="https://github.com/jane3wallace/nycda-project-biz-site" target="_blank"><i class="fa fa-github-alt"></i> Github Repo</a>
+									<a href="https://github.com/jane3wallace/nycda-project-biz-site/tree/jane-version" target="_blank"><i class="fa fa-github-alt"></i> Github Repo</a>
 								</p>
 								<div class="startup-gray-text">
 									Used in this site: 
@@ -232,17 +232,17 @@
 								<form class="footer-form-indent" action="http://flipmail.co/api/Hfp3S3zoYZuW22m8vcEi" method="post">
 									<div class="input-group">
 										<label class="input-group-label startup-gray-text">Name</label>
-										<input class="input-group-field" type="text" name="name" placeholder="Sally Struthers">
+										<input class="input-group-field" type="text" name="name" placeholder="Jon Snow">
 										<input type="hidden" name="_valid[name]" value="required"> <!-- validation rules -->
 									</div>
 									<div class="input-group">
 										<label class="input-group-label startup-gray-text">Email</label>
-										<input class="input-group-field" type="email" name="email" placeholder="name@example.com">
+										<input class="input-group-field" type="email" name="email" placeholder="jon@castleblack.com">
 										<input type="hidden" name="_valid[email]" value="required|valid_email"> <!-- validation rules -->
 									</div>
 									<div class="input-group">
 										<label class="input-group-label startup-gray-text">Message</label>
-										<textarea class="input-group-field" name="message" placeholder="Type here..."></textarea>
+										<textarea class="input-group-field" name="message" placeholder="My raven will deliver your message."></textarea>
 									</div>
 									<div class="input-group">
 										<input type="hidden" name="_subject" value="Message received from jane3wallace.com"> <!-- email subject -->
@@ -256,7 +256,7 @@
 								</form>
 							</div>
 						</div>
-						<div class"row">
+						<div class"row footer-bottom-text">
 							<div class="small-6 medium-6 large-6 columns footer-end">
 								<p class="copyright-margin">
 									<i class="fa fa-copyright"></i>&nbsp;Copyright 2016 Jane Wallace
