added meta tags and google analytics

--- a/index.html
+++ b/index.html
@@ -5,14 +5,30 @@
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>
-			Jane Wallace
+			Jane Wallace | RoR Developer
 		</title>
+		<!-- SEO Metas -->        
+		<meta name="description" content="Jane Wallace is a full stack developer specializing in Ruby on Rails and Back End Web Development." />
+	    <meta name="keywords" content="ruby on rails, web application, full stack developer, ruby, rails, back end web development, web, developer, back end, design, html, css, javascript, development" />
+	    <meta name="author" content="Jane Wallace">
+	    <meta name="twitter:site" content="@jane3wallace"> <!-- end seo metas -->
 		<link rel="shortcut icon" href="images/favicon-code.ico" type="image/x-icon" />
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="stylesheets/foundation.css" />
     	<link rel="stylesheet" href="stylesheets/app.css" />
     	<link rel="stylesheet" href="stylesheets/mfizz/font-mfizz.css">
 		<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+	    <!-- Google Analytics -->
+	    <script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'hidden', 'auto');
+		  ga('send', 'pageview');
+
+		</script> <!-- end google analytics -->
 	</head>
 	<body>
 		<!-- Page Layout -->
@@ -185,7 +201,7 @@
 									This responsive static website was a project created for The New York Code + Design Academy's Web Development 100 course that I took in Philadelphia. I created this website from scratch with HTML, CSS and JavaScript. I used a real bakery in California as the copy for this fictitious business and purchased a royalty free photo that serves as both the landing page and the color scheme of the site.
 								</p>
 								<p class="startup-gray-text">
-									I used media queries, CSS percentage values, em units, floats and the FitText jQuery plugin on the landing page to achieve a responsive design. In the image gallery, I used a jQuery lightbox plugin called Magnific Popup to zoom in on and scroll through photos. I also used Google Maps API to add the map and location of the business on the About page. I promoted the business's social media and most used contact information by highlighting them in the footer.
+									I used media queries, CSS percentage values, em units, floats and the FitText jQuery plugin on the landing page to achieve a responsive design. In the image gallery, I used a jQuery lightbox plugin called Magnific Popup to zoom in on and scroll through photos. I also used Google Maps JavaScript API to add the map and location of the business on the About page. I promoted the business's social media and most used contact information by highlighting them in the footer.
 								</p>
 							</div>
 							<div class="large-7 columns">
@@ -247,7 +263,7 @@
 									<div class="input-group">
 										<input type="hidden" name="_subject" value="Message received from jane3wallace.com"> <!-- email subject -->
 										<input type="hidden" name="_replyto" value="%email"> <!-- reply to -->
-										<!-- <input type="hidden" name="_after" value="http://jane3wallace.com/subpages/thanks.html"> --> <!-- url redirect -->
+										<input type="hidden" name="_after" value="http://jane3wallace.com/subpages/thanks.html"> <!-- url redirect -->
 										<input type="text" name="_honey" value="" style="display:none"> <!-- spam prevention -->
 									</div>
 									<div class="input-group-button">
@@ -259,12 +275,12 @@
 						<div class"row footer-bottom-text">
 							<div class="small-6 medium-6 large-6 columns footer-end">
 								<p class="copyright-margin">
-									<i class="fa fa-copyright"></i>&nbsp;Copyright 2016 Jane Wallace
+									Copyright&nbsp;<i class="fa fa-copyright"></i>&nbsp;2016. Jane Wallace. All Rights Reserved.
 								</p>
 							</div>
 							<div class="small-6 medium-6 large-6 columns footer-end">
 								<p class="text-right footer-teal-link">
-									<em>Photo of Philadelphia by <a href="https://www.flickr.com/photos/philakilla/6991329241/" target="_blank">Justin Wolfe</a></em>
+									<em>Photo of Philadelphia by <a href="https://www.flickr.com/photos/philakilla/6991329241/" target="_blank">Justin Wolfe</a>.</em>
 								</p>
 							</div>
 						</div>
