--- a/subpages/thanks.html
+++ b/subpages/thanks.html
@@ -5,14 +5,30 @@
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>
-			Jane Wallace
+			Jane Wallace | Thank You
 		</title>
+		<!-- SEO Metas -->        
+		<meta name="description" content="Jane Wallace is a full stack developer specializing in Ruby on Rails and Back End Web Development." />
+	    <meta name="keywords" content="ruby on rails, web application, full stack developer, ruby, rails, back end web development, web, developer, back end, design, html, css, javascript, development" />
+	    <meta name="author" content="Jane Wallace">
+	    <meta name="twitter:site" content="@jane3wallace"> <!-- end seo metas -->
 		<link rel="shortcut icon" href="../images/favicon-code.ico" type="image/x-icon" />
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="../stylesheets/foundation.css" />
     	<link rel="stylesheet" href="../stylesheets/app.css" />
     	<link rel="stylesheet" href="../stylesheets/mfizz/font-mfizz.css">
 		<link rel="stylesheet" type="text/css" href="../stylesheets/style.css">
+		<!-- Google Analytics -->
+	    <script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'hidden', 'auto');
+		  ga('send', 'pageview');
+
+		</script> <!-- end google analytics -->
 	</head>
 	<body>
 		<!-- Page Layout -->
@@ -57,7 +73,12 @@
 					<div class="row">
 						<div class="large-12 columns text-center intro-thanks lt-gray-text footer-teal-link">
 							<h4>Thank you!</h4>
-							<h6>Your message has been received. I'll respond to you as soon as I can.</h6>
+							<h6>
+								Your message has been received. I'll respond to you as soon as I can.
+							</h6>
+							<p>
+								<a href="../index.html#contact">Back to Contact</a>
+							</p>
 						</div>
 					</div>
 				</div> <!-- end page thanks -->
